fix overlap of the button on main page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -631,6 +631,7 @@ blockquote {
         width: 90%;
         margin: 0 0;
         text-align: center;
+        font-size: 180%;
     }
 
 
